- Particle Shapes - Fixed half of the Gadgets not working - Per Cosmetic world blacklist - Per Cosmetic HomeItem, PreviousItem and NextItem - Removed Pagination - Some general fixes

--- a/hats.yml
+++ b/hats.yml
@@ -7,6 +7,11 @@
 
 # Should Hats be enabled?
 Enabled: true
+# The worlds in which Hats will not work
+# Make sure RemoveCosmeticsOnWorldChange is set to true for this to work correctly
+WorldsBlacklist:
+- someworld
+- someotherworld
 # The hts to open the GUI
 Command: /hats
 # The message to show when a player doesn't have permission to use a Hat
@@ -41,6 +46,33 @@ RemoveItem:
     Description: '&c&oClick here to remove your current Hat'
     # The position in the GUI of this item (starts at 0)
     Position: 4
+HomeItem:
+    # The item ID and optionally data of the 'Home' item
+    Item: 355
+    # The name in the GUI of the 'Home' item
+    Name: '&c&lMain menu'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go back to the main menu!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 40
+PreviousItem:
+    # The item ID and optionally data of the 'Previous' item
+    Item: 262
+    # The name in the GUI of the 'Previous' item
+    Name: '&6< Previous'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the previous page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 39
+NextItem:
+    # The item ID and optionally data of the 'Next' item
+    Item: 262
+    # The name in the GUI of the 'Next' item
+    Name: '&6Next >'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the next page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 41
 Hats:
     Astronaut:
         # The item ID and optionally data of the item
@@ -463,4 +495,4 @@ Hats:
         Position: 119
         Permission: ultimatecosmetics.hats.questionmark
         SkullOwner: 'MHF_Question'
-DoNotChange: 3.3.3
+DoNotChange: 3.7.0
