--- a/balloons.yml
+++ b/balloons.yml
@@ -7,6 +7,11 @@
 
 # Should Balloons be enabled?
 Enabled: true
+# The worlds in which Balloons will not work
+# Make sure RemoveCosmeticsOnWorldChange is set to true for this to work correctly
+WorldsBlacklist:
+- someworld
+- someotherworld
 # The command to open the GUI
 Command: /balloons
 # The message to show when a player doesn't have permission to use a Balloon
@@ -26,14 +31,14 @@ GUIName: '&1&lBalloons'
 # The size of the GUI
 GUISize: 45
 NoPermissionItem:
-  # Should every Balloon that a player doesn't have access to be replaced by this item?
-  Enabled: true
-  # The item ID and optionally data of the item
-  Item: '351:8'
-  # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Balloon Name)
-  Name: '%cosmeticsname%'
-  # The description, or 'lore' of the item (use | to start a new line)
-  Description: '&4&oYou are not allowed to use this Balloon'
+    # Should every Balloon that a player doesn't have access to be replaced by this item?
+    Enabled: true
+    # The item ID and optionally data of the item
+    Item: '351:8'
+    # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Balloon Name)
+    Name: '%cosmeticsname%'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&4&oYou are not allowed to use this Balloon'
 RemoveItem:
     # The item ID and optionally data of the item
     Item: '30'
@@ -43,6 +48,33 @@ RemoveItem:
     Description: '&c&oClick here to remove your current Balloon'
     # The position in the GUI of this item (starts at 0)
     Position: 4
+HomeItem:
+    # The item ID and optionally data of the 'Home' item
+    Item: 355
+    # The name in the GUI of the 'Home' item
+    Name: '&c&lMain menu'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go back to the main menu!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 40
+PreviousItem:
+    # The item ID and optionally data of the 'Previous' item
+    Item: 262
+    # The name in the GUI of the 'Previous' item
+    Name: '&6< Previous'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the previous page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 39
+NextItem:
+    # The item ID and optionally data of the 'Next' item
+    Item: 262
+    # The name in the GUI of the 'Next' item
+    Name: '&6Next >'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the next page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 41
 Balloons:
     WhiteWool:
         # The item ID and optionally data of the item
@@ -306,4 +338,4 @@ Balloons:
         Description: '&7&oAn Emerald Block Balloon'
         Position: 79
         Permission: ultimatecosmetics.balloons.emeraldblock
-DoNotChange: 3.3.1
+DoNotChange: 3.7.0
