--- a/fireworks.yml
+++ b/fireworks.yml
@@ -7,6 +7,11 @@
 
 # Should Fireworks be enabled?
 Enabled: true
+# The worlds in which Fireworks will not work
+# Make sure RemoveCosmeticsOnWorldChange is set to true for this to work correctly
+WorldsBlacklist:
+- someworld
+- someotherworld
 # The command to open the GUI
 Command: /fireworks
 # The message to show when a player doesn't have permission to use a Firework
@@ -20,10 +25,37 @@ NoPermissionItem:
     Enabled: true
     # The item ID and optionally data of the item
     Item: '351:8'
-    # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Firework Name)
+    # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Balloon Name)
     Name: '%cosmeticsname%'
     # The description, or 'lore' of the item (use | to start a new line)
     Description: '&4&oYou are not allowed to use this Firework'
+HomeItem:
+    # The item ID and optionally data of the 'Home' item
+    Item: 355
+    # The name in the GUI of the 'Home' item
+    Name: '&c&lMain menu'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go back to the main menu!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 40
+PreviousItem:
+    # The item ID and optionally data of the 'Previous' item
+    Item: 262
+    # The name in the GUI of the 'Previous' item
+    Name: '&6< Previous'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the previous page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 39
+NextItem:
+    # The item ID and optionally data of the 'Next' item
+    Item: 262
+    # The name in the GUI of the 'Next' item
+    Name: '&6Next >'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the next page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 41
 Fireworks:
     WhiteBall:
         # The name in the GUI of the item
@@ -165,4 +197,4 @@ Fireworks:
         - RED
         FadeColors:
         - RED
-DoNotChange: 3.3.1
+DoNotChange: 3.7.0
