--- a/gadgets.yml
+++ b/gadgets.yml
@@ -7,6 +7,11 @@
 
 # Should Gadgets be enabled?
 Enabled: true
+# The worlds in which Gadgets will not work
+# Make sure RemoveCosmeticsOnWorldChange is set to true for this to work correctly
+WorldsBlacklist:
+- someworld
+- someotherworld
 # The command to open the GUI
 Command: /gadgets
 # The message to show when a player doesn't have permission to use a Gadget
@@ -45,6 +50,33 @@ RemoveItem:
     Description: '&c&oClick here to remove your current Gadget'
     # The position in the GUI of this item (starts at 0)
     Position: 4
+HomeItem:
+    # The item ID and optionally data of the 'Home' item
+    Item: 355
+    # The name in the GUI of the 'Home' item
+    Name: '&c&lMain menu'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go back to the main menu!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 40
+PreviousItem:
+    # The item ID and optionally data of the 'Previous' item
+    Item: 262
+    # The name in the GUI of the 'Previous' item
+    Name: '&6< Previous'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the previous page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 39
+NextItem:
+    # The item ID and optionally data of the 'Next' item
+    Item: 262
+    # The name in the GUI of the 'Next' item
+    Name: '&6Next >'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the next page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 41
 Gadgets:
     Enderbow:
         # The name in the GUI of the item
@@ -326,4 +358,4 @@ Gadgets:
         AmmoName: 'Paint'
         Cooldown: 20
         Position: 33
-DoNotChange: 3.3.1
+DoNotChange: 3.7.0
