--- a/particles.yml
+++ b/particles.yml
@@ -7,6 +7,11 @@
 
 # Should Particles be enabled?
 Enabled: true
+# The worlds in which Particles will not work
+# Make sure RemoveCosmeticsOnWorldChange is set to true for this to work correctly
+WorldsBlacklist:
+- someworld
+- someotherworld
 # The command to open the GUI
 Command: /particles
 # The message to show when a player doesn't have permission to use a Particle
@@ -24,14 +29,14 @@ GUIName: '&a&lParticles'
 # The size of the GUI
 GUISize: 45
 NoPermissionItem:
-  # Should every Particle that a player doesn't have access to be replaced by this item?
-  Enabled: true
-  # The item ID and optionally data of the item
-  Item: '351:8'
-  # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Particle Name)
-  Name: '%cosmeticsname%'
-  # The description, or 'lore' of the item (use | to start a new line)
-  Description: '&4&oYou are not allowed to use this Particle'
+    # Should every Particle that a player doesn't have access to be replaced by this item?
+    Enabled: true
+    # The item ID and optionally data of the item
+    Item: '351:8'
+    # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Particle Name)
+    Name: '%cosmeticsname%'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&4&oYou are not allowed to use this Particle'
 RemoveItem:
     # The item ID and optionally data of the item
     Item: '30'
@@ -41,6 +46,33 @@ RemoveItem:
     Description: '&c&oClick here to remove your current Particle'
     # The position in the GUI of this item (starts at 0)
     Position: 4
+HomeItem:
+    # The item ID and optionally data of the 'Home' item
+    Item: 355
+    # The name in the GUI of the 'Home' item
+    Name: '&c&lMain menu'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go back to the main menu!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 40
+PreviousItem:
+    # The item ID and optionally data of the 'Previous' item
+    Item: 262
+    # The name in the GUI of the 'Previous' item
+    Name: '&6< Previous'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the previous page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 39
+NextItem:
+    # The item ID and optionally data of the 'Next' item
+    Item: 262
+    # The name in the GUI of the 'Next' item
+    Name: '&6Next >'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the next page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 41
 Particles:
     Cloud:
         # The item ID and optionally data of the item
@@ -59,6 +91,10 @@ Particles:
         ID: 0
         # The data of the Particle effect (Can be left 0 in most cases)
         Data: 0
+        # The speed of the Particle effect (This is a pretty difficult factor to figure out right. It also decides the brightness of colors in certain Particles)
+        Speed: 0.01
+        # The shape of the Particle effect (Can be RANDOM, HELIX, HALO, DOME, CROSS, SPHERE, TRAIL)
+        Shape: RANDOM
     ColouredDust:
         Item: '351:13'
         Name: '&aColoured Dust'
@@ -68,6 +104,8 @@ Particles:
         Particle: COLOURED_DUST
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Crit:
         Item: '267'
         Name: '&aCrit'
@@ -77,6 +115,8 @@ Particles:
         Particle: CRIT
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     FireworksSpark:
         Item: '401'
         Name: '&aFireworks Spark'
@@ -86,6 +126,8 @@ Particles:
         Particle: FIREWORKS_SPARK
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Flame:
         Item: '377'
         Name: '&aFlame'
@@ -95,6 +137,8 @@ Particles:
         Particle: FLAME
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Enchantment:
         Item: '116'
         Name: '&aEnchantment'
@@ -104,6 +148,8 @@ Particles:
         Particle: FLYING_GLYPH
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     GreenSparkle:
         Item: '388'
         Name: '&aGreen Sparkle'
@@ -113,6 +159,8 @@ Particles:
         Particle: HAPPY_VILLAGER
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Heart:
         Item: '351:1'
         Name: '&4Heart'
@@ -122,6 +170,8 @@ Particles:
         Particle: HEART
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     WhiteStars:
         Item: '353'
         Name: '&aWhite Star'
@@ -131,6 +181,8 @@ Particles:
         Particle: INSTANT_SPELL
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     LargeSmoke:
         Item: '289'
         Name: '&8Large Smoke'
@@ -140,6 +192,8 @@ Particles:
         Particle: LARGE_SMOKE
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     LavaPop:
         Item: '385'
         Name: '&aLava Pop'
@@ -149,6 +203,8 @@ Particles:
         Particle: LAVA_POP
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     LavaDrip:
         Item: '327'
         Name: '&aLava Drip'
@@ -158,6 +214,8 @@ Particles:
         Particle: LAVADRIP
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     MagicCrit:
         Item: '276'
         Name: '&aMagic Crit'
@@ -167,6 +225,8 @@ Particles:
         Particle: MAGIC_CRIT
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Note:
         Item: '84'
         Name: '&aNote'
@@ -176,6 +236,8 @@ Particles:
         Particle: NOTE
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Smoke:
         Item: '351:7'
         Name: '&8Smoke'
@@ -185,6 +247,8 @@ Particles:
         Particle: PARTICLE_SMOKE
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Portal:
         Item: '351:5'
         Name: '&aPortal'
@@ -194,6 +258,8 @@ Particles:
         Particle: PORTAL
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     PotionSwirl:
         Item: '373:8193'
         Name: '&aPotion Swirl'
@@ -203,6 +269,8 @@ Particles:
         Particle: POTION_SWIRL
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Slime:
         Item: '341'
         Name: '&aSlime'
@@ -212,6 +280,8 @@ Particles:
         Particle: SLIME
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     SmallSmoke:
         Item: '351:8'
         Name: '&7Small Smoke'
@@ -221,6 +291,8 @@ Particles:
         Particle: SMALL_SMOKE
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     SnowShovel:
         Item: '332'
         Name: '&aSnow Shovel'
@@ -230,6 +302,8 @@ Particles:
         Particle: SNOW_SHOVEL
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Spell:
         Item: '373:8234'
         Name: '&7Spell'
@@ -239,6 +313,8 @@ Particles:
         Particle: SPELL
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     # Starting at page 2
     Splash:
         Item: '373'
@@ -249,6 +325,8 @@ Particles:
         Particle: SPLASH
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     Thundercloud:
         Item: '402'
         Name: '&8Thundercloud'
@@ -258,6 +336,8 @@ Particles:
         Particle: VILLAGER_THUNDERCLOUD
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     VoidFog:
         Item: '337'
         Name: '&7Void Fog'
@@ -267,6 +347,8 @@ Particles:
         Particle: VOID_FOG
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     WaterDrip:
         Item: '326'
         Name: '&aWater Drip'
@@ -276,6 +358,8 @@ Particles:
         Particle: WATERDRIP
         ID: 0
         Data: 0
+        Speed: 0.01
+        Shape: RANDOM
     WitchMagic:
         Item: '373:16393'
         Name: '&aWitch Magic'
@@ -285,4 +369,6 @@ Particles:
         Particle: WITCH_MAGIC
         ID: 0
         Data: 0
-DoNotChange: 3.3.1
+        Speed: 0.01
+        Shape: RANDOM
+DoNotChange: 3.7.0
