--- a/trails.yml
+++ b/trails.yml
@@ -7,6 +7,11 @@
 
 # Should Trails be enabled?
 Enabled: true
+# The worlds in which Trails will not work
+# Make sure RemoveCosmeticsOnWorldChange is set to true for this to work correctly
+WorldsBlacklist:
+- someworld
+- someotherworld
 # The command to open the GUI
 Command: /Trails
 # The message to show when a player doesn't have permission to use a Trail
@@ -24,14 +29,14 @@ GUIName: '&c&lTrails'
 # The size of the GUI
 GUISize: 45
 NoPermissionItem:
-  # Should every Trail that a player doesn't have access to be replaced by this item?
-  Enabled: true
-  # The item ID and optionally data of the item
-  Item: '351:8'
-  # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Trail Name)
-  Name: '%cosmeticsname%'
-  # The description, or 'lore' of the item (use | to start a new line)
-  Description: '&4&oYou are not allowed to use this Trail'
+    # Should every Trail that a player doesn't have access to be replaced by this item?
+    Enabled: true
+    # The item ID and optionally data of the item
+    Item: '351:8'
+    # The name in the GUI of the item (Use %cosmeticsname% Placeholder for the current Trail Name)
+    Name: '%cosmeticsname%'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&4&oYou are not allowed to use this Trail'
 RemoveItem:
     # The item ID and optionally data of the item
     Item: '30'
@@ -41,6 +46,33 @@ RemoveItem:
     Description: '&c&oClick here to remove your current Trail'
     # The position in the GUI of this item (starts at 0)
     Position: 4
+HomeItem:
+    # The item ID and optionally data of the 'Home' item
+    Item: 355
+    # The name in the GUI of the 'Home' item
+    Name: '&c&lMain menu'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go back to the main menu!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 40
+PreviousItem:
+    # The item ID and optionally data of the 'Previous' item
+    Item: 262
+    # The name in the GUI of the 'Previous' item
+    Name: '&6< Previous'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the previous page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 39
+NextItem:
+    # The item ID and optionally data of the 'Next' item
+    Item: 262
+    # The name in the GUI of the 'Next' item
+    Name: '&6Next >'
+    # The description, or 'lore' of the item (use | to start a new line)
+    Description: '&8&oClick to go to the next page!'
+    # The position in the GUI of this item (starts at 0)
+    Position: 41
 Trails:
     NetherQuartz:
         # The item ID and optionally data of the item
@@ -101,4 +133,4 @@ Trails:
         Description: '&e&oA Nether Star Trail'
         Position: 20
         Permission: ultimatecosmetics.trails.netherstar
-DoNotChange: 3.3.1
+DoNotChange: 3.7.0
