--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: UltimateCosmetics
 main: com.j0ach1mmall3.ultimatecosmetics.Main
-version: 3.10.3
+version: 3.11.1
 author: j0ach1mmall3
 description: Featuring over 15 different Cosmetics Types, endless possibilities!
 depend: [JLib]
@@ -107,6 +107,8 @@ permissions:
         default: op
         children:
             uc.reload: true
+            uc.openmenu: true
+            uc.debug: true
             uc.renamepet: true
             uc.giveammo: true
             uc.removeammo: true
@@ -150,6 +152,12 @@ permissions:
             uc.remove.outfit: true
     uc.reload:
         description: Access to /uc reload
+        default: op
+    uc.openmenu:
+        description: Access to /uc openmenu
+        default: op
+    uc.debug:
+        description: Access to /uc debug
         default: op
     uc.renamepet:
         description: Access to renaming your Pet
