--- a/bannercapes.yml
+++ b/bannercapes.yml
@@ -54,7 +54,7 @@ NextItem:
 BannerCapes:
     ExampleBannerCape:
         # The item format of the item
-        Item: '425 name:&3Example_BannerCape lore:&e&oThis_is_an_Example_BannerCape itemflag:hide_potion_effects basecolor:black pattern_stripe_left:white pattern_stripe_right:white pattern_stripe_top:white pattern_border:black pattern_border:black'
+        Item: '425 name:&3Example_BannerCape lore:&7&oThis_is_an_Example_BannerCape itemflag:hide_potion_effects basecolor:black pattern_stripe_left:white pattern_stripe_right:white pattern_stripe_top:white pattern_border:black pattern_border:black'
         # The position in the GUI of this item (starts at 0)
         # The position/44 = the page the BannerCape will be on
         # Position: 0 will put it in Slot 1 from page 1
