--- a/banners.yml
+++ b/banners.yml
@@ -54,7 +54,7 @@ NextItem:
 Banners:
     ExampleBanner:
         # The item format of the item
-        Item: '425 name:&4Example_Banner lore:&e&oThis_is_an_Example_Banner itemflag:hide_potion_effects basecolor:black pattern_stripe_left:white pattern_stripe_right:white pattern_stripe_middle:white pattern_stripe_top:white pattern_border:black pattern_border:black'
+        Item: '425 name:&4Example_Banner lore:&7&oThis_is_an_Example_Banner itemflag:hide_potion_effects basecolor:black pattern_stripe_left:white pattern_stripe_right:white pattern_stripe_middle:white pattern_stripe_top:white pattern_border:black pattern_border:black'
         # The position in the GUI of this item (starts at 0)
         # The position/44 = the page the Banner will be on
         # Position: 0 will put it in Slot 1 from page 1
