--- a/cloaks.yml
+++ b/cloaks.yml
@@ -56,7 +56,7 @@ NextItem:
 Cloaks:
     ExampleCloak:
         # The item format of the item
-        Item: '377 name:&7Example_Cloak lore:&e&oThis_is_an_Example_Cloak'
+        Item: '377 name:&7Example_Cloak lore:&7&oThis_is_an_Example_Cloak'
         # The position in the GUI of this item (starts at 0)
         Position: 10
         # The permission to use this Cloak
