--- a/hearts.yml
+++ b/hearts.yml
@@ -54,7 +54,7 @@ NextItem:
 Hearts:
     ExampleHearts:
         # The item format of the item
-        Item: '351:1 name:&bExample_Hearts lore:&e&oThis_is_an_Example_Hearts'
+        Item: '351:1 name:&bExample_Hearts lore:&7&oThis_is_an_Example_Hearts'
         # The position in the GUI of this item (starts at 0)
         Position: 10
         # The permission to use this Heart
