--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: UltimateCosmetics
 main: com.j0ach1mmall3.ultimatecosmetics.Main
-version: 4.0.4
+version: 4.1.0
 author: j0ach1mmall3
 description: Featuring over 20 different Cosmetics Types, endless possibilities!
 depend: [JLib]
@@ -14,6 +14,13 @@ commands:
         description: Toggle Stacker
         usage: /<command>
         aliases: togglestacker
+    Upsidedown:
+        description: Toggle Upsidedown
+        usage: /<command>
+        aliases: flip
+    Ears:
+        description: Toggle Ears
+        usage: /<command>
     GiveAmmo:
         description: Give Gadget Ammo to a player
         usage: /<command> <player> <gadget> <amount>
